[tool.poetry]
name = "distrubuted-algorithms"
version = "0.1.0"
description = ""
authors = ["cjvth <vuki03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aioconsole = "^0.8.1"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
